syntax = "proto3";
package safehouse.ams.models;
option csharp_namespace = "SafeHouseAMS.Transport.Protos.Models.LifeSituations.Commands";

import "Models/Common/UUID.proto";
import "google/protobuf/timestamp.proto";

message CreateCitizenshipChange{
  UUID EntityID = 1;
  google.protobuf.Timestamp DocumentDate = 2;
  UUID SurvivorId = 3;
  string Citizenship = 4;
}
