syntax = "proto3";
package safehouse.ams.services;
option csharp_namespace = "SafeHouseAMS.Transport.Protos.Services";

import "Models/Common/UUID.proto";
import "google/protobuf/empty.proto";
import "Models/ExploitationEpisodes/Episode.proto";
import "Models/ExploitationEpisodes/EpisodeCommand.proto";

service EpisodesCatalogue {
  rpc GetSingle (UUID) returns (models.Episode);
  rpc ApplyCommand (models.EpisodeCommand) returns (google.protobuf.Empty);

  rpc GetAllBySurvivor (UUID) returns (stream models.Episode);
}
